...
    android:orientation="vertical"
    tools:context=".UserProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/btn_login"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="318dp"
            android:layout_height="284dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/profile_image" />

    </RelativeLayout>

    <TextView
        android:id="@+id/fullName_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:hint="@string/name"
        android:textAlignment="center"
        android:textColor="@color/gray_trojan"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/uscID_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:hint="@string/uscid"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_my_reservations"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/inter"
        android:text="@string/my_reservations"
...
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_logout"
...
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn_upload_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="16dp"
...
