...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/logo_vertical" />


    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_sign_up"
        android:fontFamily="@font/inter"
...
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="364dp"
        android:autofillHints="Name"
        android:hint="Name"
        android:inputType="text"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <EditText
        android:id="@+id/user_ID"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="428dp"
        android:autofillHints="USC ID"
        android:hint="USC ID"
        android:inputType="number"
...
