<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="profile_image" type="id" />
    <item name="decor_content_parent" type="id" />
</resources>
